--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ django-cors-headers==2.3.0
 pytz==2018.5
 certifi==2018.4.16
 chardet==3.0.4
-Django==2.1
+django>=2.1.2
 django-cors-headers==2.4.0
 et-xmlfile==1.0.1
 idna==2.7
@@ -18,7 +18,7 @@ pandas==0.23.4
 Pillow==5.3.0
 python-dateutil==2.7.3
 pytz==2018.5
-requests==2.19.1
+requests>=2.20.0
 six==1.11.0
 urllib3==1.23
 xlrd==1.1.0
